# QQQ

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
QQQ/gptq/: apply_gptq.py  gptq.py  quant.py
QQQ/gptq/models/: __init__.py  llama.py  qwen2.py  qwen2_5_vl.py  qwen2_vl.py  qwen3.py  qwen3_vl.py
QQQ/gptq/qlinear/: qlinear_marlin.py
QQQ/rotation/: __init__.py  hadamard_utils.py  rotation.py
QQQ/smooth/: __init__.py  export.py  smooth.py
QQQ/smooth/migration/: migration_llama.py  migration_qwen2.py  migration_qwen2_vl.py  migration_qwen3.py
QQQ/smooth/models/: __init__.py  llama.py  qwen2.py  qwen2_5_vl.py  qwen2_vl.py  qwen3.py  qwen3_vl.py
QQQ/smooth/quantization/: __init__.py  fake_quant.py  observer.py  quant_model.py  quantized_module.py  state.py  token_wise_clipping.py
QQQ/utils/: __init__.py  data_utils.py  eval_utils.py  model_utils.py  utils.py
examples/: eval_model.py  quant_model.py  test_model.py
