[build-system]
requires = ["setuptools", "torch", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["third-party"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "E721",   # type comparison (assert type(x) == Y is common in this codebase)
    "E741",   # ambiguous variable name (common in math-heavy code)
    "F401",   # unused import (re-exports in __init__.py)
    "F403",   # wildcard import
    "F405",   # name may be undefined from wildcard import
    "F821",   # undefined name (closure captures in GPTQ loop)
    "B006",   # mutable argument default (find_layers pattern)
    "B007",   # unused loop control variable
    "B023",   # function-uses-loop-variable (intentional closure pattern in GPTQ)
    "B028",   # no explicit stacklevel in warnings
    "B905",   # zip without strict= (Python 3.10+ only)
    "UP015",  # unnecessary open mode
    "UP031",  # printf-string-formatting (% format is fine)
    "UP035",  # deprecated typing imports (List, Tuple, Optional still widely used)
    "SIM101", # duplicate isinstance call
    "SIM102", # collapsible if
    "SIM105", # suppressible exception (try/except/pass is clearer here)
    "SIM108", # ternary operator (readability preference)
    "RUF005", # collection-literal-concatenation
    "RUF012", # mutable class attributes (common in torch modules)
    "RUF059", # unused unpacked variable
]

[tool.ruff.lint.isort]
known-first-party = ["QQQ"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"setup.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
